# spendrift-be

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SPEC.md  __init__.py  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: README.md  __init__.py  env.py  script.py.mako
alembic/versions/: 18ba05361672_migrate_users_to_proper_types.py  42117ebba1e3_added_categories_module.py  525e6b3665ec_add_user_preferences_table.py  5bc67215c2e3_tracker_model_created.py  6e541ea24372_added_name_in_user_model.py  87927e56a6f2_add_sync_state_table.py  8b7c6d5e4f3a_added_refresh_tokens_table.py  a1b2c3d4e5f6_add_user_avatars_table.py  adb75b1dc8b0_expense_model_added.py  bd81a202b4b3_initial_schema.py  bd89125ec348_add_category_budgets_table.py  e65289d0e673_timezone_aware_datetime_columns.py  ebc995d81be0_added_budgets_module.py  f1a2b3c4d5e6_add_avatar_url_to_users.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  logging_config.py  security.py
app/middleware/: __init__.py  rate_limit.py
docs/: ARCHITECTURE.md  SCRIPTS_REVIEW.md
modules/ai/: router.py  schema.py  service.py
modules/auth/: router.py  schema.py  service.py
modules/budget_alerts/: __init__.py  router.py  schema.py  service.py
modules/budgets/: model.py  repo.py  router.py  schema.py  service.py
modules/categories/: model.py  repo.py  router.py  schema.py  service.py
scripts/: cleanup_test_data.py  migrate_html_expenses.py  push-to-prod.sh  sync-db.sh  sync-prod.sh  sync_db.py
tests/: conftest.py  test_ai.py  test_auth.py  test_budget_alerts.py  test_budgets.py  test_categories.py  test_category_budgets.py  test_dashboard.py  test_expenses.py  test_preferences.py  test_rate_limiting.py  test_reports.py  test_trackers.py  test_users.py
(+43 files in other folders)
